--- a/wps-installer/usr/share/bigbashview/bcc/apps/wps/wait2.sh.htm
+++ b/wps-installer/usr/share/bigbashview/bcc/apps/wps/wait2.sh.htm
@@ -4,7 +4,7 @@ export TEXTDOMAINDIR="/usr/share/locale"
 export TEXTDOMAIN=bigkernel
 
 
-if [ "$p_remove" = "1" ]; then
+if [ "$remove" = "1" ]; then
     bigsudo urxvt  +sb -fn "xft:Ubuntu Mono:pixelsize=16" -embed $(xprop -root '\t$0' _NET_ACTIVE_WINDOW | cut -f 2) -e /usr/share/bigbashview/bcc/apps/wps/run-terminal.sh remove
 else
     bigsudo urxvt  +sb -fn "xft:Ubuntu Mono:pixelsize=16" -embed $(xprop -root '\t$0' _NET_ACTIVE_WINDOW | cut -f 2) -e /usr/share/bigbashview/bcc/apps/wps/run-terminal.sh 
